carousel is always full width.

--- a/app/views/home/_carousel.html.erb
+++ b/app/views/home/_carousel.html.erb
@@ -1,35 +1,37 @@
-<div id="carousel" class="carousel slide" data-ride="carousel" data-interval="100000">
-  <%# 100 seconds between images, to minimize distractions for now. %>
+<div class="col-lg-12">
+  <div id="carousel" class="carousel slide" data-ride="carousel" data-interval="100000">
+    <%# 100 seconds between images, to minimize distractions for now. %>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <% Carousel.items.each_with_index do |item, index| %>
-      <div class="item <%= 'active' if index == 0 %>">
-        <a href="<%= item.href %>">
-          <% if index <= 1 || index == Carousel.items.count - 1 %>
-            <%# 
-              The first 2 images and the very last one need to be pre-filled. 
-              Also supply lazy src on each so it can be reset for any.
-            %>
-            <img data-lazy-src="<%= item.src %>" src="<%= item.src %>" >
-          <% else %>
-            <img data-lazy-src="<%= item.src %>">
-          <% end %>
-          <div class="carousel-caption">
-            <%= item.text %>
-          </div>
-        </a>
-      </div>
-    <% end %>
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <% Carousel.items.each_with_index do |item, index| %>
+        <div class="item <%= 'active' if index == 0 %>">
+          <a href="<%= item.href %>">
+            <% if index <= 1 || index == Carousel.items.count - 1 %>
+              <%# 
+                The first 2 images and the very last one need to be pre-filled. 
+                Also supply lazy src on each so it can be reset for any.
+              %>
+              <img data-lazy-src="<%= item.src %>" src="<%= item.src %>" >
+            <% else %>
+              <img data-lazy-src="<%= item.src %>">
+            <% end %>
+            <div class="carousel-caption">
+              <%= item.text %>
+            </div>
+          </a>
+        </div>
+      <% end %>
+    </div>
+
+    <!-- Controls -->
+    <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
-
-  <!-- Controls -->
-  <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
 </div>
