--- a/app/assets/stylesheets/locals/header-footer.css.scss
+++ b/app/assets/stylesheets/locals/header-footer.css.scss
@@ -19,7 +19,7 @@
     .nav a {
         margin-left: 2em;
         font-size: 22px;
-        font-weight: 600;
+        font-weight: $medium;
         &:hover { color: $yellow; }
     }
 }
