Semibold carousel title. Fix #434.

--- a/app/assets/stylesheets/locals/home.css.scss
+++ b/app/assets/stylesheets/locals/home.css.scss
@@ -35,6 +35,7 @@
             left: 0px;
             right: auto;
             font-size: 48px;
+            font-weight: $semibold;
             background-color: $transparent;
             color: #FFF;
             text-align: left;
