D'oh: we were getting line breaks in the middle of words everywhere.

--- a/app/assets/stylesheets/locals/catalog-show.css.scss
+++ b/app/assets/stylesheets/locals/catalog-show.css.scss
@@ -24,4 +24,21 @@
             background: $pale-grey;
         }
     }
+    .long-url {
+        // Mostly for line-breaking long URLs in citation, when viewed on mobile.
+        // I think in a URL, hyphens could be confusing... 
+        // We could add a special class to supress hyphenation only on URLs?
+
+        // From: https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/
+
+        /* These are technically the same, but use both */
+        overflow-wrap: break-word;
+        word-wrap: break-word;
+
+        -ms-word-break: break-all;
+        /* This is the dangerous one in WebKit, as it breaks things wherever */
+        word-break: break-all;
+        /* Instead use this non-standard one: */
+        word-break: break-word;
+    }
 }
