Banner padding to spec. h1 is no longer on show, so remove.

--- a/app/assets/stylesheets/globals/defaults.css.scss
+++ b/app/assets/stylesheets/globals/defaults.css.scss
@@ -9,7 +9,8 @@ html > body {
     h1 {
         font-size: 48px;
         font-weight: $bold;
-        padding-bottom: 20px;
+        margin-bottom: 35px;
+        margin-top: 55px;
     }
     h2 {
         font-weight: $semibold;
