--- a/app/assets/stylesheets/locals/home.css.scss
+++ b/app/assets/stylesheets/locals/home.css.scss
@@ -58,8 +58,8 @@
     }
     
     #about {
-        margin: $grid-gutter-width/2 0;
-        padding: $grid-gutter-width/2;
+        margin: 80px 0;
+        padding: 40px;
         background: $light-grey;
         color: #FFF;
         a { 
@@ -77,6 +77,12 @@
             img { height: 100%}
             margin-bottom: 20px; // Just for mobile, really.
             font-weight: $medium;
+        }
+        h3 {
+            font-weight: $bold;
+        }
+        p {
+            margin: 0;
         }
     }
     
