--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,9 +23,11 @@
   <div class="row" id="about">
     <div class="col-sm-6">
       <h3>What is Open Vault?</h3>
-      <p>We provide online access to unique and historically important content
-        produced by the public television and radio station WGBH.</p>
-      <p><a href="/about">About Us</a></p>
+      <p>
+        We provide online access to unique and historically important content
+        produced by the public television and radio station WGBH.
+        <a href="/about">Learn more.</a>
+      </p>
     </div>
     <div class="col-sm-6 text-center">
       <h3>Follow Us!</h3>
