I am not convinced that this much space actually looks good, but not my call.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
     <%= render partial: 'carousel' %>
   </div>
 
-  <div class="row">
+  <div class="row" id="nav-button-container">
     <% {
         series: 'Browse titles in the WGBH Media Library and Archives collection.',
         exhibits: 'Explore selected topics and digitized programs of historical significance curated by WGBH Mellon Scholars.',
