--- a/app/assets/stylesheets/locals/home.css.scss
+++ b/app/assets/stylesheets/locals/home.css.scss
@@ -43,19 +43,23 @@
         }
     }
     
-    a h2 {
-        color: $dark-blue;
-        font-size: 36px; // TODO: This causes line wrapping in md.
-        background: $yellow;
-        &:hover { background: $pale-yellow; }
-        @media (min-width: $screen-lg-min) {
-            padding: 1em 0em; // No side padding, so none line wrap...
+    #nav-button-container {
+        margin: 66px 0;
+        a h2 {
+            color: $dark-blue;
+            font-size: 36px; // TODO: This causes line wrapping in md.
+            background: $yellow;
+            &:hover { background: $pale-yellow; }
+            @media (min-width: $screen-lg-min) {
+                padding: 1em 0em; // No side padding, so none line wrap...
+            }
+            @media (max-width: $screen-md-max) {
+                padding: 1em 1.2em; // Excessive side padding, to force all to wrap.
+            }
+            font-weight: $semibold;
         }
-        @media (max-width: $screen-md-max) {
-            padding: 1em 1.2em; // Excessive side padding, to force all to wrap.
-        }
-        font-weight: $semibold;
     }
+    
     
     #about {
         margin: 80px 0;
