--- a/app/views/catalog/_constraints.html.erb
+++ b/app/views/catalog/_constraints.html.erb
@@ -1,6 +1,6 @@
 <%# OV tweak: not just any params will do + no start over + put 'unless' inside to preserve whitespace. %>
 <div id="appliedParams" class="clearfix constraints-container">
-  <% unless params.slice(:f, :q) == {'f' => {'access' => [PBCore::ONLINE]}} %>
+  <% unless params[:f] == {'access' => [PBCore::ONLINE]} && params[:q].blank? %>
     <span class="constraints-label"><%= t('blacklight.search.filters.title') %></span>
     <%= render_constraints(params) %>
   <% end %>
