image padding. Screen shot will be attached.

--- a/app/assets/stylesheets/globals/defaults.css.scss
+++ b/app/assets/stylesheets/globals/defaults.css.scss
@@ -23,4 +23,8 @@ html > body {
         line-height: 35px;
         p { margin: 0 0 40px; }
     }
+    div.signature img {
+        margin: 0.5em -0.75em -1em;
+        width: 100%;
+    }
 }
