Simplify images in override pages.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,5 +26,6 @@
 @import "locals/catalog-index";
 @import "locals/catalog-show";
 @import "locals/series-index";
+@import "locals/override-show";
 @import "locals/plain";
 @import "locals/aspect-ratio";
