--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -12,7 +12,7 @@
           <span class="glyphicon glyphicon-search"></span>
         </form>
       </div>
-      <div class="col-md-9 hidden-sm hidden-xs nav">
+      <div class="col-md-9 nav">
         <%= link_to(t('series'), '/series') %>
         <%= link_to(t('exhibits'), '/exhibits') %>
         <%= link_to(t('collections'), '/collections') %>
