--- a/app/assets/stylesheets/locals/header-footer.css.scss
+++ b/app/assets/stylesheets/locals/header-footer.css.scss
@@ -48,6 +48,14 @@
 
 
 #header,#footer {
-    padding: 2em;
+    @media(min-width: $screen-md-min) {
+        padding: 2em;
+    }
+    @media(max-width: $screen-sm-max) {
+        padding: 1em 0;
+        input { width: 100% }
+        svg#ov-logo { width: 200px; }
+        form .glyphicon { right: 30px; left: auto; }
+    }
     &, a { color: #FFF; }
 }
