CSS tweak to get the pointer off the border.

--- a/app/assets/stylesheets/locals/collections-exhibits.css.scss
+++ b/app/assets/stylesheets/locals/collections-exhibits.css.scss
@@ -107,8 +107,9 @@
             font-weight: $medium;
             li .pointer {
                 position: absolute;
-                left: 0px;
+                left: 15px;
             }
+            padding-left: 40px;
         }
         
     }
