get tests to pass.

--- a/app/views/shared/_collection_exhibit_show.html.erb
+++ b/app/views/shared/_collection_exhibit_show.html.erb
@@ -33,6 +33,6 @@
           <%= current_tab.html_safe if current_tab %>
         </div>
       <% end %>
-    <% end %>
+    <% end if params[:tab] %>
   </div>
 </div>
