Signature image style was intersecting in a messy way with other CSS.

--- a/app/assets/stylesheets/locals/collections-exhibits.css.scss
+++ b/app/assets/stylesheets/locals/collections-exhibits.css.scss
@@ -62,9 +62,8 @@
             margin-bottom: 20px;
         }
 
-        div.signature img {
-            margin: $grid-gutter-width/2 $grid-gutter-width/2 -$grid-gutter-width $grid-gutter-width/2;
-            width: 100%;
+        img.signature {
+            width: 50%;
         }
 
         #tabs {
