Paging is not working...

--- a/app/views/oai/index.xml.erb
+++ b/app/views/oai/index.xml.erb
@@ -17,5 +17,8 @@
                 </metadata>
             </record>
         <% end %>
+        <% if @next_resumption_token %>
+            <resumptionToken><%= @next_resumption_token %></resumptionToken>
+        <% end %>
     </ListRecords>
 </OAI-PMH>
