--- a/app/views/catalog/show.html.erb
+++ b/app/views/catalog/show.html.erb
@@ -14,6 +14,17 @@
       <%= render partial: 'catalog/player/player' %>
       
       <dl>
+        <% if !@pbcore.special_collections.empty? || !@pbcore.scholar_exhibits.empty? %>
+          <dt>Learn more</dt>
+          <dd>
+            <% @pbcore.special_collections_hash.each do |key, title| %> 
+              Part of <%= link_to(title, "/collections/#{key}") %>.
+            <% end %>
+            <% @pbcore.scholar_exhibits_hash.each do |key, title| %> 
+              Part of the <%= "/exhibits/#{key}" %> <%= title %> exhibit.
+            <% end %>
+          </dd>
+        <% end %>
         <% [
               {field: 'series_title', label: 'Series', facet_link: true},
               {field: 'program_title', label: 'Program', facet_link: true},
