Footer margin. Fix #431.

--- a/app/assets/stylesheets/locals/header-footer.css.scss
+++ b/app/assets/stylesheets/locals/header-footer.css.scss
@@ -27,6 +27,7 @@
 #footer {
     background: $light-grey;
     font-size: 22px;
+    margin-top: 80px;
 
     .primary-links a {
       font-weight: $semibold;
