Images to full width. Fix #509.

--- a/app/views/catalog/player/_player.html.erb
+++ b/app/views/catalog/player/_player.html.erb
@@ -1,6 +1,18 @@
 <div id="player">
-  <%= render partial: 'catalog/player/player_left',  locals: { col_class: 'col-lg-4 col-md-5 col-sm-6 col-xs-12' } %>
-  <%= render partial: 'catalog/player/player_right', locals: { col_class: 'col-lg-8 col-md-7 col-sm-6 col-xs-12' } %>
+  <%# 
+    Full width image; otherwise preserve a relatively 
+    constant portion of the screen for the player.
+    At each size, the columns should sum to 12, though
+    the balance shifts between left and right.
+  %>
+  <%= render partial: 'catalog/player/player_left',  
+             locals: { 
+               col_class: @pbcore.image? ? 'col-xs-12' : 'col-lg-4 col-md-5 col-sm-6 col-xs-12'
+             } %>
+  <%= render partial: 'catalog/player/player_right', 
+             locals: { 
+               col_class: @pbcore.image? ? 'col-xs-12' : 'col-lg-8 col-md-7 col-sm-6 col-xs-12'
+             } %>
   <div class="clearfix"></div>
   <%# Parent div collapses without this clearfix: I don't really understand the problem. %>
 </div>
