logo w/o font dependency.

--- a/app/assets/stylesheets/locals/header-footer.css.scss
+++ b/app/assets/stylesheets/locals/header-footer.css.scss
@@ -4,7 +4,7 @@
         width: 250px;
     }
     svg#ov-logo {
-        text { fill: #FFF;  }
+        text,path { fill: #FFF;  }
     }
     input {
         padding: 0px 28px 0px 8px;
