Hover yellow. Fix #520.

--- a/app/assets/stylesheets/locals/header-footer.css.scss
+++ b/app/assets/stylesheets/locals/header-footer.css.scss
@@ -5,6 +5,7 @@
     }
     svg#ov-logo {
         text,path { fill: #FFF;  }
+        &:hover { text,path { fill: $yellow; } }
     }
     input {
         padding: 0px 28px 0px 8px;
