Formatting of collection/exhibit lists. Fix #548. Use BL classes more consistently. CSS for indentation.

--- a/app/assets/stylesheets/locals/collections-exhibits.css.scss
+++ b/app/assets/stylesheets/locals/collections-exhibits.css.scss
@@ -86,6 +86,11 @@
         #documents .document {
             border: none;
         }
+        .no-thumbs a {
+            display: block;
+            margin-left: 2em;
+            text-indent: -2em;
+        }
         
         iframe {
             // (For embeds)
