--- a/app/views/shared/_collection_exhibit_show.html.erb
+++ b/app/views/shared/_collection_exhibit_show.html.erb
@@ -18,15 +18,18 @@
         <% other_docs = current_tab[12..-1] %>
         <%= render partial: 'shared/document_grid', locals: {documents: top_docs} %>
         <% if other_docs && !other_docs.empty? %>
-        <div class="clearfix"></div>
-          <p>And <%= other_docs.count %> more...</p>
-          <% other_docs.in_groups(2, false).each do |docs_col| %>
-            <div class="col-sm-6">
-              <% docs_col.each do |doc| %>
-                <a href="/catalog/<%= doc.id %>"><%= doc.title %></a><br/>
-              <% end %>
-            </div>
-          <% end %>
+          <div class="row">
+            <div class="col-sm-12">And <%= other_docs.count %> more...</div>
+          </div>
+          <div class="row no-thumbs">
+            <% other_docs.in_groups(2, false).each do |docs_col| %>
+              <div class="col-md-6">
+                <% docs_col.each do |doc| %>
+                  <a href="/catalog/<%= doc.id %>"><%= doc.title %></a>
+                <% end %>
+              </div>
+            <% end %>
+          </div>
         <% end %>
       <% else %>
         <div class="<%= col_class %>">
