Fill in full URL so we do not need special case in test.

--- a/app/views/shared/_tab_row.html.erb
+++ b/app/views/shared/_tab_row.html.erb
@@ -6,7 +6,7 @@
         selected = key == params[:tab] %>
         <li>
           <% if selected %><span class="pointer">&#x25B6;</span><% end %>
-          <%= link_to_unless(selected, tab.title, "#{key}##{anchor}" ) %>
+          <%= link_to_unless(selected, tab.title, "/#{params[:controller]}/#{params[:id]}/#{key}##{anchor}" ) %>
         </li>
     <% end %>
   </ul>
