Adds a common method for rendering a 404 page
* Implements common 404 rendering method for Override and Catalog routes.
* Adds controller tests for Override and Catalog 404s.
* Adds a wee bit o styling.
* Simplifies contraint for Override routes.

--- a/public/404.html.erb
+++ b/public/404.html.erb
@@ -1,1 +1,4 @@
-There is nothing here. Check that the URL is correct.
+<div class="col-lg-12 not_found_404">
+  I'm sorry, there's nothing here. Please try searching above,
+  or browse the <a href="/exhibits" alt="scholar exhibits">exhibits</a> and <a href="/collections" alt="special collections">collections</a>.
+</div>
