--- a/public/404.html.erb
+++ b/public/404.html.erb
@@ -1,4 +1,5 @@
 <div class="col-lg-12 not_found_404">
   I'm sorry, there's nothing here. Please try searching above,
-  or browse the <a href="/exhibits" alt="scholar exhibits">exhibits</a> and <a href="/collections" alt="special collections">collections</a>.
+  or browse the <a href="/exhibits" alt="scholar exhibits" target="_top">exhibits</a>
+  and <a href="/collections" alt="special collections" target="_top">collections</a>.
 </div>
