--- a/app/views/shared/_document_grid.html.erb
+++ b/app/views/shared/_document_grid.html.erb
@@ -1,6 +1,6 @@
 <%= render layout: 'shared/grid', 
            locals: { 
-             docs: documents,
+             docs: documents + [other_count],
              cols: {
                 lg: 4,
                 md: 3,
