Let catalog#index work.

--- a/app/views/shared/_document_grid.html.erb
+++ b/app/views/shared/_document_grid.html.erb
@@ -1,6 +1,7 @@
+<% documents += [other_count] if defined? other_count %>
 <%= render layout: 'shared/grid', 
            locals: { 
-             docs: documents + [other_count],
+             docs: documents,
              cols: {
                 lg: 4,
                 md: 3,
