And X more. Fix #583. (#589)
* And X more. Fix #583.

* Let catalog#index work.

--- a/app/views/shared/_document_grid.html.erb
+++ b/app/views/shared/_document_grid.html.erb
@@ -1,3 +1,4 @@
+<% documents += [other_count] if defined? other_count %>
 <%= render layout: 'shared/grid', 
            locals: { 
              docs: documents,
