Fixes one test, but I feel like I am doing polymorphism wrong.

--- a/app/views/shared/_document.html.erb
+++ b/app/views/shared/_document.html.erb
@@ -15,7 +15,7 @@
             &hellip;
           </div>
         <% end if highlights %>
-      <% end %>
+      <% end if document.class.method_defined? :response %>
     </div>
   </div>
   <div class="info">
