--- a/app/views/catalog/player/_player_left.html.erb
+++ b/app/views/catalog/player/_player_left.html.erb
@@ -18,9 +18,7 @@
       <% @pbcore.proxy_srcs.each do |src| %>
         <%= tag('source', src: src, type: @pbcore.video? ? 'video/mp4' : 'audio/mp3') %>
       <% end %>
-      <!-- We have transcripts, but not SRT caption files:
-        <track kind="captions" src="..."/>
-      -->
+      <track src="/transcripts/<%= @pbcore.id %>.vtt" default/>
     <% end %>
   <% end %>
 
