Particularly with the new solid button, we need more space inside the border.

--- a/app/assets/stylesheets/locals/plain.css.scss
+++ b/app/assets/stylesheets/locals/plain.css.scss
@@ -28,6 +28,7 @@
         .para {
             border: 2px solid transparent;
             border-radius: 8px;
+            padding: 0 2px;
         }
         .para.current {
             border-color: $light-grey
