--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -13,9 +13,10 @@
         </form>
       </div>
       <div class="col-md-9 hidden-sm hidden-xs nav">
-        <%= link_to(t('series'), '/series') %>
+        <%= link_to(t('series_short'), '/series') %>
         <%= link_to(t('exhibits'), '/exhibits') %>
         <%= link_to(t('collections'), '/collections') %>
+        <%= link_to(t('donate'), '/donate', id: 'donate') %>
       </div>
     </div>
   </div>
