Fix #612. Keep the Access facets, but add a pull-right link.

--- a/app/assets/stylesheets/locals/catalog-index.css.scss
+++ b/app/assets/stylesheets/locals/catalog-index.css.scss
@@ -11,6 +11,7 @@
         border: none;
         background: none;
         padding: $grid-gutter-width/2;
+        line-height: 1.95 !important; // Hack to get the baselines on left and right to align.
         margin: 0px;
     }
     @media (min-width: $screen-md-min) {
