--- a/app/views/catalog/_constraints.html.erb
+++ b/app/views/catalog/_constraints.html.erb
@@ -4,4 +4,18 @@
     <span class="constraints-label"><%= t('blacklight.search.filters.title') %></span>
     <%= render_constraints(params) %>
   <% end %>
+  
+  <% unless params[:f] == {'access' => [PBCore::ALL]} %>
+    <span class="constraints-label pull-right">
+        Or search <%=
+      link_to(
+        'all records',
+        begin
+          params = request.params.except(:action, :controller).clone
+          params[:f][:access] = [PBCore::ALL]
+          '/catalog?' + params.to_query
+        end
+      ) %>, not just media.
+    </span>
+  <% end %>
 </div>
