--- a/app/views/catalog/player/_player_right.html.erb
+++ b/app/views/catalog/player/_player_right.html.erb
@@ -15,7 +15,7 @@
     <p>
       More material is available from this program at the WGBH Archive.
       If you are a researcher interested in accessing the collection at WGBH, 
-      please email <a href="mailto:openvault@wgbh.org">openvault@wgbh.org</a>.
+      please email <a href="mailto:archive_requests@wgbh.org">openvault@wgbh.org</a>.
     </p>
   <% end %>
     
