--- a/app/assets/stylesheets/locals/header-footer.css.scss
+++ b/app/assets/stylesheets/locals/header-footer.css.scss
@@ -11,11 +11,15 @@
         padding: 0px 28px 0px 8px;
         color: #000;
     }
-    form .glyphicon {
+    button {
         position: absolute;
         color: #000;
-        left: 240px;
-        top: 7px;
+        background: #FFF;
+        left: 230px;
+        top: 3px;
+        border: none;
+        font-family: "Glyphicons Halflings";
+        &::before { content: "\E003"; }
     }
     .nav { padding-left: 2em; }
     .nav a {
@@ -59,7 +63,7 @@
         padding: 1em 0;
         input { width: 100% }
         svg#ov-logo { width: 200px; }
-        form .glyphicon { right: 30px; left: auto; }
+        button { right: 30px; left: auto; }
     }
     &, a { color: #FFF; }
 }
