--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -8,8 +8,8 @@
     <div class="row">
       <div class="col-md-3">
         <form action="/catalog">
-          <input name="q" placeholder="Search..." value="<%= params[:q] %>" onchange="this.form.submit()"/>
-          <span class="glyphicon glyphicon-search"></span>
+          <input name="q" placeholder="Search..." value="<%= params[:q] %>" onchange="this.form.submit();"/>
+          <button type="submit"/>
         </form>
       </div>
       <div class="col-md-9 hidden-sm hidden-xs nav">
