--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -9,7 +9,7 @@
       <div class="col-md-3">
         <form action="/catalog">
           <input name="q" placeholder="Search..." value="<%= params[:q] %>" onchange="this.form.submit();"/>
-          <button type="submit"/>
+          <button type="submit"><span class="glyphicon glyphicon-search"></span></button>
         </form>
       </div>
       <div class="col-md-9 hidden-sm hidden-xs nav">
