--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -8,6 +8,7 @@
     <div class="row">
       <div class="col-md-3">
         <form action="/catalog">
+          <%= render_hash_as_hidden_fields(params.except(:q, :controller, :action)) %>
           <input name="q" placeholder="Search..." value="<%= params[:q] %>" onchange="this.form.submit();"/>
           <button type="submit"><span class="glyphicon glyphicon-search"></span></button>
         </form>
