--- a/app/assets/stylesheets/locals/plain.css.scss
+++ b/app/assets/stylesheets/locals/plain.css.scss
@@ -24,6 +24,7 @@
             color: #FFF;
             padding: 0 4px;
             border-radius: 3px;
+            margin-right: 4px;
         }
         .para {
             border: 2px solid transparent;
