stock sales modal

--- a/app/views/catalog/player/_player_left.html.erb
+++ b/app/views/catalog/player/_player_left.html.erb
@@ -33,5 +33,10 @@
     </div>
   <% end %>
 
+  <br/>
+  <span class="btn btn-primary btn-sm" onclick="$('#license-modal').modal('show');">
+    License Clip
+  </span>
+
 </div>
 
