--- a/app/views/catalog/player/_player_modal.html.erb
+++ b/app/views/catalog/player/_player_modal.html.erb
@@ -36,3 +36,25 @@
     </div>
   </div>
 </div>
+
+<div class="modal fade" id="license-modal" tabindex="-1" role="dialog" aria-labelledby="request-modal-title">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title" id="request-modal-title">License WGBH Content</h4>
+      </div>
+      <div class="modal-body">
+        <p>
+          If you are interested in licensing stock footage please visit
+          <a href="http://wgbhstocksales.org">WGBH Stock Sales</a>, or contact us directly at 
+          <a href="mailto:stock_sales@wgbh.org">stock_sales@wgbh.org</a> or 617-300-3939.
+        </p>
+      </div>
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-primary" 
+                onclick="$('#license-modal').modal('hide');">
+            Close</button>
+      </div>
+    </div>
+  </div>
+</div>
