--- a/app/views/catalog/player/_player_right.html.erb
+++ b/app/views/catalog/player/_player_right.html.erb
@@ -4,25 +4,25 @@
       <p>
         <% verb = @pbcore.video? ? 'View' : 'Listen' %>
         <% site_name = @pbcore.aapb_url ? 'American Archive of Public Broadcasting' : 'Boston TV News Digital Library' %>
-        <%= verb %> online at the 
+        <%= verb %> online at the
         <a href="<%= site_url %>" target="_blank"><%= site_name %>
           <small><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></small></a>
       </p>
     <% end %>
-  <% end %>  
+  <% end %>
 
   <% if @pbcore.this_isnt_all? %>
     <p>
       More material is available from this program at the WGBH Archive.
-      If you are a researcher interested in accessing the collection at WGBH, 
+      If you are a researcher interested in accessing the collection at WGBH,
       please email <a href="mailto:archive_requests@wgbh.org">archive_requests@wgbh.org</a>.
     </p>
   <% end %>
-    
+
   <% if !@pbcore.digitized? %>
     <p>
       Undigitized item:
-      <span class="btn btn-primary btn-sm" 
+      <span class="btn btn-primary btn-sm"
             onclick="$('#request-modal').modal('show');">
           Request Digitization</span>
     </p>
@@ -31,6 +31,7 @@
   <% if @pbcore.transcript_src %>
     <% 'got_it'.tap do |cookie_name| %>
       <% if !cookies[cookie_name] %>
+
         <div id="find-help" class="well well-sm" style="margin-bottom: 0;"><small>
             <script>
               (function() {
@@ -40,7 +41,7 @@
                   message = '&ldquo;&#x2318; F&rdquo;';
                 } else if (navigator.userAgent.match(/iPod|iPad|iPhone/i)) {
                   message = 'the address bar at the top of the screen';
-                } else { 
+                } else {
                   message = 'control-F';
                 }
                 document.write('Looking for something? Use ' + message + ' to search the transcript, ');
@@ -55,14 +56,27 @@
         </small></div>
       <% end %>
     <% end %>
+
+    <button id="btn-hide" class="btn btn-primary btn-sm">Show/Hide Transcript</button>
+
     <iframe id="transcript" src="/transcripts/<%= @pbcore.id %>"
             frameBorder="0" height="400"></iframe>
+
   <% elsif !@pbcore.image? %>
     <p>
-      Untranscribed item: 
-      <span class="btn btn-primary btn-sm" 
+      Untranscribed item:
+      <span class="btn btn-primary btn-sm"
             onclick="$('#request-modal').modal('show');">
           Request Transcription</span>
     </p>
   <% end %>
 </div>
+
+<script>
+
+  $(document).ready(function(){
+      $("#"+"btn-hide").click(function(){
+          $("#"+"transcript").toggle();
+      });
+  });
+</script>
