Completes initial cut at defining page sections
* Still need to look at CMLess for .md pages

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   <%= t('blacklight.application_name') %>
 <% end %>
 
-<div class="container-fluid">
+<main class="container-fluid">
   <div class="row">
     <%= render partial: 'carousel' %>
   </div>
@@ -19,7 +19,7 @@
       </div>
     <% end %>
   </div>
-  
+
   <div class="row" id="about">
     <div class="col-sm-6">
       <h3>What is Open Vault?</h3>
@@ -46,4 +46,4 @@
       <a href="http://blog.openvault.wgbh.org/" target="_blank" class="btn btn-lg">Blog</a>
     </div>
   </div>
-</div>
+</main>
