--- a/app/views/shared/_collection_exhibit_show.html.erb
+++ b/app/views/shared/_collection_exhibit_show.html.erb
@@ -2,7 +2,7 @@
   <%= item.title + ' - ' + t('blacklight.application_name') %>
 <% end %>
 
-<div class="container-fluid">
+<main class="container-fluid" role="main">
   <% col_class = 'col-md-11 col-lg-9' %>
   <div class="row">
     <div class="<%= col_class %>">
@@ -35,4 +35,4 @@
       <% end %>
     <% end %>
   <% end %>
-</div>
+</main>
