--- a/app/views/catalog/index.html.erb
+++ b/app/views/catalog/index.html.erb
@@ -4,14 +4,14 @@
 <div id="sidebar">
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
+      <nav class="col-md-12" role="navigation">
         <%= render 'search_sidebar' %>
-      </div>
+      </nav>
     </div>
   </div>
 </div>
 
-<div id="content" class="container-fluid">
+<main id="content" class="container-fluid">
   <%# Added container-fluid for a bit more padding so margins align. %>
   <% unless has_search_parameters? %>
     <%# We should never get here, because we redirect to add the access facet. -%>
@@ -19,4 +19,4 @@
   <% else %>
     <%= render 'search_results' %>
   <% end %>
-</div>
+</main>
