--- a/app/views/catalog/show.html.erb
+++ b/app/views/catalog/show.html.erb
@@ -1,30 +1,30 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-xs-12">
-      
+    <main class="col-xs-12">
+
       <% if @pbcore.password_required? %>
         <%= render partial: 'password_modal' %>
       <% end %>
-      
+
       <h2><%= @pbcore.title %></h2>
-      
+
       <% if !@pbcore.special_collections.empty? || !@pbcore.scholar_exhibits.empty? %>
         <p>
-          <% @pbcore.special_collections_hash.each do |key, title| %> 
+          <% @pbcore.special_collections_hash.each do |key, title| %>
             Part of <%= link_to(title, "/collections/#{key}") %>.
           <% end %>
-          <% @pbcore.scholar_exhibits_hash.each do |key, title| %> 
+          <% @pbcore.scholar_exhibits_hash.each do |key, title| %>
             Part of <%= link_to(title, "/exhibits/#{key}") %>.
           <% end %>
         </p>
       <% end %>
-      
+
       <%= content_tag('p', @pbcore.date) if @pbcore.date %>
-      
+
       <%= content_tag('p', @pbcore.asset_description) %>
-      
+
       <%= render partial: 'catalog/player/player' %>
-      
+
       <dl>
         <% [
               {field: 'series_title', label: 'Series', facet_link: true},
@@ -48,22 +48,22 @@
           <%= render partial: 'pbcore_field', locals: field_def %>
         <% end %>
         <dt>Citation</dt>
-        
+
         <% url = "<span class='long-url'>http://openvault.wgbh.org/catalog/#{@pbcore.id}</span>".html_safe %>
         <% today = Date.today.to_formatted_s(:long) %>
         <% org = 'WGBH Media Library & Archives' %>
-        
-        <dd><em>Chicago</em>: 
+
+        <dd><em>Chicago</em>:
             &ldquo;<%= @pbcore.title %>,&rdquo;
-            <%= @pbcore.date + ',' if @pbcore.date %> 
-            <%= org %>, 
-            accessed <%= today %>, 
+            <%= @pbcore.date + ',' if @pbcore.date %>
+            <%= org %>,
+            accessed <%= today %>,
             <%= url %>.</dd>
         <dd><em>MLA</em>:
             &ldquo;<%= @pbcore.title %>.&rdquo;
             <%= @pbcore.date + '.' if @pbcore.date %>
             <%= org %>.
-            Web. <%= today %>. 
+            Web. <%= today %>.
             &lt;<%= url %>&gt;.</dd>
         <dd><em>APA</em>:
             <%= @pbcore.title %>.
@@ -80,6 +80,6 @@
             }.to_query
           %>">contact us</a>, including the URL.
       </div>
-    </div>
+    </main>
   </div>
 </div>
