--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,13 +1,13 @@
 <div id="footer" class="container-fluid">
   <div class="container">
     <div class="row">
-      <ul class="col-md-4 col-xs-12 primary-links">
+      <nav class="col-md-4 col-xs-12 primary-links" role="navigation">
       <!-- <ul class="col-sm-4 col-xs-6"> -->
         <p><%= link_to(t('series'), '/series') %></p>
         <p><%= link_to(t('exhibits'), '/exhibits') %></p>
         <p><%= link_to(t('collections'), '/collections') %></p>
-      </ul>
-      <ul class="col-md-4 col-xs-12">
+      </nav>
+      <nav class="col-md-4 col-xs-12" role="navigation">
       <!-- <ul class="col-sm-3 col-xs-6"> -->
         <p><%= link_to('About Us', '/about') %></p>
         <p><%= link_to('Blog', 'http://blog.openvault.wgbh.org/') %></p>
@@ -19,17 +19,17 @@
         <p><%= link_to('Privacy Policy', '/privacy-policy') %></p>
         <p><%= link_to('Terms and Conditions', '/terms-and-conditions') %></p>
         <p><%= link_to('Visiting the Archives', '/visiting-the-archives') %></p>
-      </ul>
-      <div class="col-md-4 col-xs-12">
+      </nav>
+      <footer class="col-md-4 col-xs-12" role="contentinfo">
         <%= render partial: 'shared/wgbh_logo.svg' %>
         <div class="copyright">
           Copyright &copy; 2015 WGBH <br/>
           Educational Foundation<br/>
           All rights reserved
         </div>
-      </div>
+      </footer>
     </div>
-  </div>    
+  </div>
 </div>
 
 <script type="text/javascript">
