--- a/app/views/override/show.html.erb
+++ b/app/views/override/show.html.erb
@@ -1,8 +1,8 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-11 col-lg-9">
+    <main class="col-md-11 col-lg-9">
       <h2><%= @page_title %></h2>
       <%= @override.body_html.html_safe %>
-    </div>
+    </main>
   </div>
 </div>
