--- a/app/views/home/_carousel.html.erb
+++ b/app/views/home/_carousel.html.erb
@@ -8,13 +8,13 @@
         <div class="item <%= 'active' if index == 0 %>">
           <a href="<%= item.href %>">
             <% if index <= 1 || index == Carousel.items.count - 1 %>
-              <%# 
-                The first 2 images and the very last one need to be pre-filled. 
+              <%#
+                The first 2 images and the very last one need to be pre-filled.
                 Also supply lazy src on each so it can be reset for any.
               %>
-              <img data-lazy-src="<%= item.src %>" src="<%= item.src %>" >
+              <img data-lazy-src="<%= item.src %>" src="<%= item.src %>" aria-hidden="true" >
             <% else %>
-              <img data-lazy-src="<%= item.src %>">
+              <img data-lazy-src="<%= item.src %>" aria-hidden="true">
             <% end %>
             <div class="carousel-caption">
               <%= item.text %>
